@@ -83,19 +83,6 @@ sub create_usergroup {
   return;
 }
 
-sub create_run_status {
-  my $self = shift;
-  my $util = $self->util();
-  my $cgi = $util->cgi();
-  my $description = $cgi->param('description');
-  if (!$description) {
-    croak 'No status given';
-  }
-  my $rsd = npg::model::run_status_dict->new({util => $util, description => $description});
-  $rsd->create();
-  return;
-}
-
 sub create_user_to_usergroup {
   my $self = shift;
   my $util = $self->util();
@@ -132,8 +119,6 @@ npg::view::administration
 =head2 create_user - handles creating a user for the system
 
 =head2 create_usergroup - handles creation of a new user group
-
-=head2 create_run_status - handles creation of a new run status
 
 =head2 create_user_to_usergroup - handles adding a user to a user group for permissions
 
