@@ -1,6 +1,0 @@
-New run status added.
-Please click <a href="/cgi-bin/npg/administration">here</a> to continue.
-
-<script type="text/javascript">
-  document.location.href = '/cgi-bin/npg/administration';
-</script>
